--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   # 기본 브랜치에 대한 푸시 이벤트 발생 시 실행
   push:
-    branches: ['main']
+    branches: ["main"]
 
   # Actions 탭에서 수동으로 워크플로우를 실행할 수 있도록 구성
   workflow_dispatch:
@@ -14,14 +14,15 @@ permissions:
   contents: read
   pages: write
   id-token: write
+  actions: read
 
 # 동시에 하나의 배포만 허용하도록 구성
 concurrency:
-  group: 'pages'
+  group: "pages"
   cancel-in-progress: true
 
 jobs:
-  # 단순히 배포만 수행하기에 하나의 잡으로만 구성      
+  # 단순히 배포만 수행하기에 하나의 잡으로만 구성
   deploy:
     environment:
       name: github-pages
@@ -39,7 +40,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: "pnpm"
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Build
@@ -50,7 +51,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           # dist 디렉터리 업로드
-          path: './dist'
+          path: "./dist"
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v3
